--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">RonaldoGame</string>
+    <string name="app_name">Ronaldo Catch</string>
+    <string name="dialog_question">Are you sure restart game?</string>
+    <string name="score">Score: %d </string>
+    <string name="restart">Restart?</string>
+    <string name="gameover">Game Over! </string>
+    <string name="timefinish">Time Finish!</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="time">Time: </string>
+
 </resources>
